scissor to scissors

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1>Rock, Paper and Scissors</h1>
+        <a id='enter-game-link' href=''>Enter</a>
     </header>
     <content>
         <div class='game-option' onclick="selectOption('rock')">
