--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,33 @@
 <body>
     <header>
         <h1>Rock, Paper and Scissors</h1>
-        <a id='enter-game-link' href=''>Enter</a>
+        <div>
+            <input id='enter-game-input' />
+            <a id='enter-game-link' href=''>Enter</a>
+        </div>
     </header>
     <content>
-        <div class='game-option' onclick="selectOption('rock')">
+        <div class='game-option option' id='rock' onclick="selectOption('rock')">
             <p>Rock</p>
         </div>
-        <div class='game-option' onclick="selectOption('paper')">
+        <div class='game-option option' id='paper' onclick="selectOption('paper')">
             <p>Paper</p>
          </div>
-        <div class='game-option' onclick="selectOption('scissors')">
+        <div class='game-option option' id='scissors' onclick="selectOption('scissors')">
+            <p>Scissors</p>
+        </div>
+
+        <div class="game-versus">
+            <p>VS</p>
+        </div>
+
+        <div class='game-option'>
+            <p>Rock</p>
+        </div>
+        <div class='game-option'>
+            <p>Paper</p>
+         </div>
+        <div class='game-option'>
             <p>Scissors</p>
         </div>
 
@@ -34,6 +51,12 @@
         <div id='lose-modal' class='modal lose'>
             <div class='modal-content lose'>
                 <p>YOU LOSE!</p>
+            </div>
+        </div>
+
+        <div id='draw-modal' class='modal draw'>
+            <div class='modal-content draw'>
+                <p>THAT'S A DRAW!</p>
             </div>
         </div>
     </content>
