Added player vs computer

--- a/public/game.html
+++ b/public/game.html
@@ -14,7 +14,9 @@
 
 <body>
     <header>
-        <h1>Rock, Paper and Scissors</h1>
+        <a href='/'>
+            <h1>Rock, Paper and Scissors</h1>
+        </a>
         <div>
             <input id='enter-game-input' />
             <a id='enter-game-link' href=''>Enter</a>
