Added CVC game. Improved player layout

--- a/public/game.html
+++ b/public/game.html
@@ -35,10 +35,8 @@
             </div>
         </div>
 
-        <div class="game-versus">
-            <p id='player-name' class='player'></p>
-            <p>VS</p>
-            <p id='versus-player-name'></p>
+        <div class="game-versus" id='player-name-list'>
+            
         </div>
 
         <div id='end-round-modal' class='modal hide'>
