--- a/public/game.html
+++ b/public/game.html
@@ -17,10 +17,7 @@
         <a href='/'>
             <h1>Rock, Paper and Scissors</h1>
         </a>
-        <div>
-            <input id='enter-game-input' />
-            <a id='enter-game-link' href=''>Enter</a>
-        </div>
+        <h2 id='game-id'>GameID 3</h2>
     </header>
     <content>
         <div class='game-option-list' id='game-option-list'>
